# CS-304-Speech-Recognition-Code

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: mic_testing.py  project1.py  project3.py  project3_predict.py  project3_predict_simple.py  project3_train.py  project3_train_no_empty.py  project4_2digits.py  project4_phone.py  project4_phone_interactive.py  project5_find_trans_ndigits_no_sil.py  project5_find_trans_ndigits_with_sil.py  project5_interactive.py  project5_interactive_multi.py  project5_interactive_single.py  project5_test_1digit.py  project5_test_2digits.py  project5_test_ndigits.py  project5_test_ndigits_no_sil.py  project5_test_ndigits_with_sil.py  project5_train_2digits.py  project5_train_ndigits.py  project5_train_no_empty.py  project6_interactive.py  project6_train.py
src/loe-speech-recognition/: __init__.py  __main__.py  dynamic_time_wrapping.py  dynamic_time_wrapping_2.py  gaussian_mixture_model.py  hidden_markov_model.py  interface.ipynb  main.py  mfcc.py  play_all.py  project3_interface.ipynb  record.py  segmentation.py  visualization.py  visualization_librosa.py
src/loe_speech_recognition/: __init__.py  csvnia.py  dynamic_time_wrapping.py  gaussian_mixture_model.py  hidden_markov_model.py  hidden_markov_model_big.py  hidden_markov_model_inference.py  mfcc.py  model_boundary.py  model_collection.py  segmentation.py  signal.py  signal_separation.py  ti_digits.py  transition_probability.py  visualizer.py
src/loe_speech_recognition/deprecated/: visualization.py
